# schat

./: .gitignore  CMakeLists.txt  README.md
include/: SChat.h  precompiled.h
include/networking/: Client.h  Server.h
src/: SChat.cpp  main.cpp
src/networking/: Client.cpp  Server.cpp
tests/: test.cpp
